[package]
name = "CoreDB"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1"
atoi = "2.0.0"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"

[[bin]]
name = "coredb"
path = "src/main.rs"